tests/miniJava/neg/004476_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] java ( if int [] java ) { return 0 ; } }
